fix hx dark mode

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -672,6 +672,11 @@ h1, h2, h3, h4 {
   color: rgb(23 37 84 / var(--tw-text-opacity));
 }
 
+:is(.dark h1),:is(.dark  h2),:is(.dark  h3),:is(.dark  h4) {
+  --tw-text-opacity: 1;
+  color: rgb(241 245 249 / var(--tw-text-opacity));
+}
+
 /* header */
 
 header > *:not([class^="DocSearch"]) {
